[project]
name = "icwsm-2026-continual-learning-tutorial-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adapters>=1.3.0",
    "avalanche-lib>=0.6.0",
    "click>=8.4.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "transformers[torch]>=4.57.6",
]
